--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
   text-align: center;
-}
+  /*border: 2px solid black;*/
+  height: 100vh;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+
+  font-family: "Rubik", sans-serif;
+
+  background-color: aliceblue;
 }
 
-.App-link {
-  color: #61dafb;
+.nextQuote {
+  border-radius: 18%;
+  padding: 15px;
+  margin: 3%;
+
+  font-size: 15px;
+  font-weight: bold;
+  background-color: antiquewhite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.randomQuote {
+  font-size: 25px;
 }
